--- a/s.html
+++ b/s.html
@@ -6,10 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" >
 </head>
-<body>
-    <div>
-        <button id="nootnoot">눗눗밈</button>
-        <button id="happy">해피밈</button>
+<body style="background-color: #fff9c4;">
+    <div class="buttoncolor">
+        <h1>밈 저장소</h1>
+        <button id="happy" class="btn">해피밈</button>
+        <button id="nootnoot" class="btn">눗눗밈</button>
+        <button id="oio" class="btn">오아이오밈</button> <!--gf-->
     </div>
     <div class="carousel">
         <div class="track">
@@ -21,23 +23,30 @@
         </div>
     </div>
     <div class="button">
-        <button id="nextbnt">다음</button>
-        <button id="for1"> 해피해피~ </button>
-        <button id="lastbnt">뒤로</button>
+        <button id="for1" class="btn"> 해피해피~ </button>
     </div>
      <div class="carousel1">
         <div class="track1">
-            <img src = "image copy.png" class="slide1"/>
-            <img src = "image copy 2.png" class="slide1"/>
-            <img src = "image copy 3.png" class="slide1"/>
-            <img src = "image copy 4.png" class="slide1"/>
-            <img src = "image copy 5.png" class="slide1"/>
+            <img src = "imageNOOT.png" class="slide1"/>
+            <img src = "imageNOOT2.png" class="slide1"/>
+            <img src = "imageNOOT3.png" class="slide1"/>
+            <img src = "imageNOOT4.png" class="slide1"/>
+            <img src = "imageNOOT5.png" class="slide1"/>
         </div>
-    </div>
+     </div>
     <div class="button1">
-        <button id="nextbnt1">다음</button>
-        <button id="for2"> 눗눗~ </button>
-        <button id="lastbnt1">뒤로</button>
+        <button id="for2" class="btn"> 눗눗~ </button>
+    </div>
+       <div class="carousel2">
+        <div class="track2">
+            <img src = "imageOIO.png" class="slide2"/>
+            <img src = "imageOIO1.png" class="slide2"/>
+            <img src = "imageOIO4.png" class="slide2"/>
+            <img src = "imageOIO3.png" class="slide2"/>
+        </div>
+     </div>
+    <div class="button2">
+        <button id="for3" class="btn"> 오아이오~ </button>
     </div>
 <script src="script.js"></script>
 </body>
