도끼강화추가함

--- a/1html/html.html
+++ b/1html/html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>나무RPG</title>
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
@@ -14,9 +14,12 @@
             <img src = "treecut.png" class="slide"/>
         </div>
     </div>
-    <hr class="hrs"> 
+    <div class="hrs">
+        <hr> 
+    </div>
     <div class="divsize">
-        <h1><div id="ex"><button>도끼 강화!</button></div></h1>
+        <h1 class="hh1" id="upmoney"></h1>
+        <div class="ex" id="up"><button>도끼 강화!</button></div>
     </div>
     <script src="./javas.js"></script>
 </body>
