--- a/1html/html.html
+++ b/1html/html.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <h1><div id="myHeading"></div></h1>
+    <h1 id="myHeading"></h1> 
+    <button class="buttonbgm" id="bgm">bgm</button>
     <div class="carousel">
         <div class="track">
             <img src = "tree.png" class="slide"/>
@@ -18,8 +19,7 @@
         <hr> 
     </div>
     <div class="divsize">
-        <h1 class="hh1" id="upmoney"></h1>
-        <div class="ex" id="up"><button>도끼 강화!</button></div>
+        <div class="ex" id="up"><button class="button" role="button"><div id="upmoney"></div></button></div>
     </div>
     <script src="./javas.js"></script>
 </body>
