--- a/scroll/scoll.html
+++ b/scroll/scoll.html
@@ -18,6 +18,7 @@
     </div>
     <h1 class="gameov">이민길에게 진 성민규는 자신의 이름을 잃게 된다...</h1>
     <h1 class="win">성민규는 이민길을 이겨 자신의 이름을 되찾았다.</h1>
+    <h1 class="perpectwin">압도적인 성민규의 승리로 이민길이 초살되었다.</h1>
     <div class="cursor" id="gameArea">
         <div id="ship">
             <img src="image-removebg-preview.png" class="imgsize" id="redcolor"/>
