도끼 다만듬

--- a/1html/html.html
+++ b/1html/html.html
@@ -7,12 +7,30 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <h1 id="myHeading"></h1> 
+    <h1 id="myHeading" style="width: 500px;"></h1> 
     <button class="buttonbgm" id="bgm">bgm</button>
     <div class="carousel">
         <div class="track">
-            <img src = "tree.png" class="slide"/>
-            <img src = "treecut.png" class="slide"/>
+            <img src = "png/tamu.png" class="slide"/>
+            <img src = "png/tamu1.png" class="slide"/>
+            <img src = "png/diso.png" class="slide"/>
+            <img src = "png/diso1.png" class="slide"/>
+            <img src = "png/gomulsang.png" class="slide"/>
+            <img src = "png/gomulsang1.png" class="slide"/>
+            <img src = "png/cupang.png" class="slide"/>
+            <img src = "png/cupang1.png" class="slide"/>
+            <img src = "png/common.png" class="slide"/>
+            <img src = "png/common1.png" class="slide"/>
+            <img src = "png/an.png" class="slide"/>
+            <img src = "png/an1.png" class="slide"/>
+            <img src = "png/gm.png" class="slide"/>
+            <img src = "png/gm1.png" class="slide"/>
+            <img src = "png/bib.png" class="slide"/>
+            <img src = "png/bib1.png" class="slide"/>
+            <img src = "png/nadu.png" class="slide"/>
+            <img src = "png/nadu1.png" class="slide"/>
+            <img src = "png/m.png" class="slide"/>
+            <img src = "png/m1.png" class="slide"/>
         </div>
     </div>
     <div class="hrs">
@@ -20,6 +38,7 @@
     </div>
     <div class="divsize">
         <div class="ex" id="up"><button class="button" role="button"><div id="upmoney"></div></button></div>
+        <div class="pet" id="petspone"><button class="petbutton" role="petbutton"><div id="petname"></div>sds</button></div>
     </div>
     <script src="./javas.js"></script>
 </body>
