--- a/1html/html.html
+++ b/1html/html.html
@@ -49,6 +49,8 @@
             </div>
         </div>
         <div class="back" id="backback"><button class="backbutton" role="backbutton"><p>뒤로가기</p></button></div>
+        <canvas class="canvas1" id="canvas"></canvas>
+        <button class="spin1" id="spin">룰렛 돌리기</button>
     <script src="./javas.js"></script>
 </body>
 </html>
