--- a/teachar/teachar.html
+++ b/teachar/teachar.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>선생님 설명</title>
+    <title>방과후의 지혜공주</title>
+    <link href="teachar.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>방</h1>
 </body>
 </html>
